--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "zombie": "^6.1.4",
     "helmet": "^3.18.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "mongoose": "^5.5.12"
   },
   "engines": {
     "node": "8.x"
