--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "helmet": "^3.18.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "mongoose": "^5.5.12"
+    "mongoose": "^5.5.12",
+    "request-ip": "^2.1.3"
   },
   "engines": {
     "node": "8.x"
